m/logs/exp_00013.err
  File "../exps/mter_test.py", line 51
    lr = [.008, .03][int((task_id %  2)]
                                       ^
SyntaxError: invalid syntax
